fix: remove custom scrollbars

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@ header {
   height: $navbar-height;
   width: 100%;
   color: #EEE;
-  box-shadow: 0px 1px 5px 0px rgba(50, 50, 50, 0.75);
+  // box-shadow: 0px 1px 5px 0px rgba(50, 50, 50, 0.75);
   position: fixed;
   top: 0;
   z-index: 1;
@@ -19,7 +19,8 @@ main {
   position: fixed;
   bottom: 0;
   z-index: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   background: #FFF;
 }
 
