--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@ html, body {
   overflow: hidden;
 }
 
+.simplebar-track.horizontal {
+  display: none;
+}
+
 .viewport {
   .simplebar-track.vertical {
     top: 0.3rem;
